fix: sidebar dark mode (#474)

--- a/src/unfold/styles.css
+++ b/src/unfold/styles.css
@@ -621,10 +621,9 @@ trix-toolbar[id^="trix-toolbar-"] {
   @apply flex flex-row font-medium items-center px-2.5 py-1 rounded  bg-white shadow-sm text-gray-700 hover:bg-white dark:bg-gray-900 dark:hover:bg-gray-900 dark:text-white;
 }
 
-
 /*******************************************************
  Simplebar
  *******************************************************/
-.simplebar-track .simplebar-scrollbar.simplebar-visible::before {
+.simplebar-track .simplebar-scrollbar::before {
   @apply bg-gray-900/80  dark:bg-gray-400/80;
 }
